# zed-npm-update-checker

./: .gitignore  AGENTS.md  CHANGELOG.MD  Cargo.toml  LICENSE  README.md  extension.toml  npm-update-checker-lsp
.github/workflows/: release.yml
lsp/: Cargo.toml
lsp/src/: lsp.rs  main.rs  parser.rs  registry.rs  settings.rs
src/: lib.rs
test/: Log  package.json
zed-npm-update-checker-ext/: Cargo.toml
zed-npm-update-checker-ext/src/: lib.rs
