[package]
name = "zed-npm-update-checker"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Highlights outdated npm packages in package.json files."

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"

[workspace]
members = ["lsp"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
