[package]
name = "npm-package-json-checker"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "📥 Highlights outdated npm packages and shows changelogs in package.json files. Auto-fetches changelogs from GitHub releases and/or CHANGELOG.md. Shown minimalistically without UI bloat."

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"

[workspace]
members = ["lsp"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
