[package]
name = "npm-package-json-checker-lsp"
version = "1.0.1"
edition = "2021"
license = "MIT"
description =  "📥 LSP to highlight outdated npm packages and shows changelogs in package.json files. \nAuto-fetches changelogs from GitHub releases and/or CHANGELOG.md. Shown minimalistically without UI bloat."

[[bin]]
name = "npm-package-json-checker-lsp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "sync", "time"] }
tower-lsp = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
regex = "1"
lazy_static = "1.4"


